# chhoto-url

./: compose.yaml
.github/workflows/: image-publish-dev.yaml
actix/: Cargo.toml
actix/src/: auth.rs  config.rs  database.rs  main.rs  services.rs  utils.rs
resources/: index.html
resources/static/: script.js  styles.css
