# SPDX-FileCopyrightText: 2023 Sayantan Santra <sayantan.santra689@gmail.com>
# SPDX-License-Identifier: MIT

[package]
name = "chhoto-url"
version = "1.2.1"
edition = "2021"
authors = ["Sayantan Santra <sayantan[dot]santra689[at]gmail[dot]com"]
license = "mit"
description = "A simple selfhosted URL shortener with no unnecessary features."
homepage = "https://github.com/minoplhy/chhoto-url"
documentation = "https://github.com/minoplhy/chhoto-url"
repository = "https://github.com/minoplhy/chhoto-url"
readme = "README.md"
keywords = [
    "docker",
    "rust",
    "self-hosted",
    "url-shortener",
    "webapp",
    "shortener",
    "link-shortener",
    "actix-web",
]
categories = ["web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.10.2"
actix-files = "0.6.6"
rusqlite = { version = "0.34.0", features = ["bundled"] }
regex = "1.11.1"
rand = "0.9.0"
actix-session = { version = "0.10.1", features = ["cookie-session"] }
env_logger = "0.11.8"
nanoid = "0.4.0"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = [ "derive" ] }
once_cell = "1.21.3"
